--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,21 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+
+/frontend_graphql_blog/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+/frontend_graphql_blog/README.md
+/frontend_graphql_blog/.gitignore
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
